[gd_scene load_steps=14 format=3 uid="uid://wtkk8mk1ydq7"]

[ext_resource type="Script" path="res://chest_scene.gd" id="1_s0q7v"]
[ext_resource type="Texture2D" uid="uid://drbl3r01q1k7h" path="res://download (5).jpg" id="2_v6bkl"]
[ext_resource type="Shader" path="res://ChestScene.gdshader" id="2_w778w"]
[ext_resource type="Texture2D" uid="uid://m727u1pqwjuf" path="res://gwiazdy_-_ramka_do_druku_z_miejscem_na_wstawienie_-removebg-preview.png" id="3_0wres"]
[ext_resource type="Texture2D" uid="uid://bl63hgecq31dl" path="res://raregems/crabgem.png" id="3_40osy"]
[ext_resource type="FontFile" uid="uid://b2clys7lbyd3t" path="res://scenes/Kid Games.ttf" id="7_h4pob"]
[ext_resource type="Texture2D" uid="uid://c015poey4wnxi" path="res://eab62181-3ecf-4e4f-96ee-4b352596a9ea-removebg-preview.png" id="8_lhve0"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wkbfl"]
shader = ExtResource("2_w778w")
shader_parameter/progress = 0.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mcoks"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lex7d"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bimkj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xa2a0"]
bg_color = Color(0.445261, 0.671807, 1, 1)
border_width_right = 2
border_width_bottom = 4
border_color = Color(0, 0.368095, 0.797968, 1)
corner_radius_top_left = 10
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7
expand_margin_left = 8.0
expand_margin_top = 4.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gll5b"]
bg_color = Color(0.945098, 0.941176, 0.415686, 1)
border_width_left = 11
border_width_top = 11
border_width_right = 11
border_width_bottom = 11
border_color = Color(1, 0.8, 0.254902, 1)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
shadow_color = Color(0, 0, 0, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s0q7v")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -68.0
offset_top = -5.0
offset_right = 540.0
offset_bottom = 861.0
texture = ExtResource("2_v6bkl")
expand_mode = 1
stretch_mode = 5

[node name="TextureRect2" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = -1.0
offset_top = -2.0
offset_right = 477.0
offset_bottom = 857.0
texture = ExtResource("3_0wres")
expand_mode = 1

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_top = 172.0
offset_right = 475.0
offset_bottom = 795.0

[node name="GridContainer" type="GridContainer" parent="ScrollContainer"]
custom_minimum_size = Vector2(83, 1144)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 192
theme_override_constants/v_separation = 166
columns = 2

[node name="CrabJewel" type="Control" parent="ScrollContainer/GridContainer"]
layout_mode = 2

[node name="JewelImage" type="TextureRect" parent="ScrollContainer/GridContainer/CrabJewel"]
material = SubResource("ShaderMaterial_wkbfl")
layout_mode = 0
offset_left = 30.0
offset_top = -36.0
offset_right = 255.0
offset_bottom = 117.0
texture = ExtResource("3_40osy")
expand_mode = 1
stretch_mode = 5

[node name="Button" type="Button" parent="ScrollContainer/GridContainer/CrabJewel"]
layout_mode = 0
offset_left = 75.0
offset_top = 97.0
offset_right = 202.0
offset_bottom = 132.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_mcoks")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_lex7d")
theme_override_styles/normal = SubResource("StyleBoxEmpty_bimkj")

[node name="Label" type="Label" parent="ScrollContainer/GridContainer/CrabJewel"]
layout_mode = 0
offset_left = 83.0
offset_top = 102.0
offset_right = 202.0
offset_bottom = 132.0
theme_override_colors/font_color = Color(0.878431, 0.470588, 0.466667, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("7_h4pob")
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_xa2a0")
text = "323242"

[node name="CrabJewel2" type="Control" parent="ScrollContainer/GridContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="ScrollContainer/GridContainer/CrabJewel2"]
layout_mode = 0
offset_left = 75.0
offset_top = 97.0
offset_right = 202.0
offset_bottom = 132.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_mcoks")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_lex7d")
theme_override_styles/normal = SubResource("StyleBoxEmpty_bimkj")

[node name="JewelImage" type="TextureRect" parent="ScrollContainer/GridContainer/CrabJewel2"]
material = SubResource("ShaderMaterial_wkbfl")
layout_mode = 0
offset_left = 30.0
offset_top = -36.0
offset_right = 255.0
offset_bottom = 117.0
texture = ExtResource("3_40osy")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="ScrollContainer/GridContainer/CrabJewel2"]
layout_mode = 0
offset_left = 83.0
offset_top = 102.0
offset_right = 202.0
offset_bottom = 132.0
theme_override_colors/font_color = Color(0.878431, 0.470588, 0.466667, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("7_h4pob")
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_xa2a0")
text = "323242"

[node name="CrabJewel3" type="Control" parent="ScrollContainer/GridContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="ScrollContainer/GridContainer/CrabJewel3"]
layout_mode = 0
offset_left = 75.0
offset_top = 97.0
offset_right = 202.0
offset_bottom = 132.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_mcoks")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_lex7d")
theme_override_styles/normal = SubResource("StyleBoxEmpty_bimkj")

[node name="JewelImage" type="TextureRect" parent="ScrollContainer/GridContainer/CrabJewel3"]
material = SubResource("ShaderMaterial_wkbfl")
layout_mode = 0
offset_left = 30.0
offset_top = -36.0
offset_right = 255.0
offset_bottom = 117.0
texture = ExtResource("3_40osy")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="ScrollContainer/GridContainer/CrabJewel3"]
layout_mode = 0
offset_left = 83.0
offset_top = 102.0
offset_right = 202.0
offset_bottom = 132.0
theme_override_colors/font_color = Color(0.878431, 0.470588, 0.466667, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("7_h4pob")
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_xa2a0")
text = "323242"

[node name="CrabJewel4" type="Control" parent="ScrollContainer/GridContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="ScrollContainer/GridContainer/CrabJewel4"]
layout_mode = 0
offset_left = 75.0
offset_top = 97.0
offset_right = 202.0
offset_bottom = 132.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_mcoks")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_lex7d")
theme_override_styles/normal = SubResource("StyleBoxEmpty_bimkj")

[node name="JewelImage" type="TextureRect" parent="ScrollContainer/GridContainer/CrabJewel4"]
material = SubResource("ShaderMaterial_wkbfl")
layout_mode = 0
offset_left = 30.0
offset_top = -36.0
offset_right = 255.0
offset_bottom = 117.0
texture = ExtResource("3_40osy")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="ScrollContainer/GridContainer/CrabJewel4"]
layout_mode = 0
offset_left = 83.0
offset_top = 102.0
offset_right = 202.0
offset_bottom = 132.0
theme_override_colors/font_color = Color(0.878431, 0.470588, 0.466667, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("7_h4pob")
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_xa2a0")
text = "323242"

[node name="CrabJewel5" type="Control" parent="ScrollContainer/GridContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="ScrollContainer/GridContainer/CrabJewel5"]
layout_mode = 0
offset_left = 75.0
offset_top = 97.0
offset_right = 202.0
offset_bottom = 132.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_mcoks")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_lex7d")
theme_override_styles/normal = SubResource("StyleBoxEmpty_bimkj")

[node name="JewelImage" type="TextureRect" parent="ScrollContainer/GridContainer/CrabJewel5"]
material = SubResource("ShaderMaterial_wkbfl")
layout_mode = 0
offset_left = 30.0
offset_top = -36.0
offset_right = 255.0
offset_bottom = 117.0
texture = ExtResource("3_40osy")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="ScrollContainer/GridContainer/CrabJewel5"]
layout_mode = 0
offset_left = 83.0
offset_top = 102.0
offset_right = 202.0
offset_bottom = 132.0
theme_override_colors/font_color = Color(0.878431, 0.470588, 0.466667, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("7_h4pob")
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_xa2a0")
text = "323242"

[node name="CrabJewel6" type="Control" parent="ScrollContainer/GridContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="ScrollContainer/GridContainer/CrabJewel6"]
layout_mode = 0
offset_left = 75.0
offset_top = 97.0
offset_right = 202.0
offset_bottom = 132.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_mcoks")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_lex7d")
theme_override_styles/normal = SubResource("StyleBoxEmpty_bimkj")

[node name="JewelImage" type="TextureRect" parent="ScrollContainer/GridContainer/CrabJewel6"]
material = SubResource("ShaderMaterial_wkbfl")
layout_mode = 0
offset_left = 30.0
offset_top = -36.0
offset_right = 255.0
offset_bottom = 117.0
texture = ExtResource("3_40osy")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="ScrollContainer/GridContainer/CrabJewel6"]
layout_mode = 0
offset_left = 83.0
offset_top = 102.0
offset_right = 202.0
offset_bottom = 132.0
theme_override_colors/font_color = Color(0.878431, 0.470588, 0.466667, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("7_h4pob")
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_xa2a0")
text = "323242"

[node name="CrabJewel7" type="Control" parent="ScrollContainer/GridContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="ScrollContainer/GridContainer/CrabJewel7"]
layout_mode = 0
offset_left = 75.0
offset_top = 97.0
offset_right = 202.0
offset_bottom = 132.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_mcoks")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_lex7d")
theme_override_styles/normal = SubResource("StyleBoxEmpty_bimkj")

[node name="JewelImage" type="TextureRect" parent="ScrollContainer/GridContainer/CrabJewel7"]
material = SubResource("ShaderMaterial_wkbfl")
layout_mode = 0
offset_left = 30.0
offset_top = -36.0
offset_right = 255.0
offset_bottom = 117.0
texture = ExtResource("3_40osy")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="ScrollContainer/GridContainer/CrabJewel7"]
layout_mode = 0
offset_left = 83.0
offset_top = 102.0
offset_right = 202.0
offset_bottom = 132.0
theme_override_colors/font_color = Color(0.878431, 0.470588, 0.466667, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("7_h4pob")
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_xa2a0")
text = "323242"

[node name="CrabJewel8" type="Control" parent="ScrollContainer/GridContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="ScrollContainer/GridContainer/CrabJewel8"]
layout_mode = 0
offset_left = 75.0
offset_top = 97.0
offset_right = 202.0
offset_bottom = 132.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_mcoks")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_lex7d")
theme_override_styles/normal = SubResource("StyleBoxEmpty_bimkj")

[node name="JewelImage" type="TextureRect" parent="ScrollContainer/GridContainer/CrabJewel8"]
material = SubResource("ShaderMaterial_wkbfl")
layout_mode = 0
offset_left = 30.0
offset_top = -36.0
offset_right = 255.0
offset_bottom = 117.0
texture = ExtResource("3_40osy")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="ScrollContainer/GridContainer/CrabJewel8"]
layout_mode = 0
offset_left = 83.0
offset_top = 102.0
offset_right = 202.0
offset_bottom = 132.0
theme_override_colors/font_color = Color(0.878431, 0.470588, 0.466667, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("7_h4pob")
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_xa2a0")
text = "323242"

[node name="CrabJewel9" type="Control" parent="ScrollContainer/GridContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="ScrollContainer/GridContainer/CrabJewel9"]
layout_mode = 0
offset_left = 75.0
offset_top = 97.0
offset_right = 202.0
offset_bottom = 132.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_mcoks")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_lex7d")
theme_override_styles/normal = SubResource("StyleBoxEmpty_bimkj")

[node name="JewelImage" type="TextureRect" parent="ScrollContainer/GridContainer/CrabJewel9"]
material = SubResource("ShaderMaterial_wkbfl")
layout_mode = 0
offset_left = 30.0
offset_top = -36.0
offset_right = 255.0
offset_bottom = 117.0
texture = ExtResource("3_40osy")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="ScrollContainer/GridContainer/CrabJewel9"]
layout_mode = 0
offset_left = 83.0
offset_top = 102.0
offset_right = 202.0
offset_bottom = 132.0
theme_override_colors/font_color = Color(0.878431, 0.470588, 0.466667, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("7_h4pob")
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_xa2a0")
text = "323242"

[node name="CrabJewel10" type="Control" parent="ScrollContainer/GridContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="ScrollContainer/GridContainer/CrabJewel10"]
layout_mode = 0
offset_left = 75.0
offset_top = 97.0
offset_right = 202.0
offset_bottom = 132.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_mcoks")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_lex7d")
theme_override_styles/normal = SubResource("StyleBoxEmpty_bimkj")

[node name="JewelImage" type="TextureRect" parent="ScrollContainer/GridContainer/CrabJewel10"]
material = SubResource("ShaderMaterial_wkbfl")
layout_mode = 0
offset_left = 30.0
offset_top = -36.0
offset_right = 255.0
offset_bottom = 117.0
texture = ExtResource("3_40osy")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="ScrollContainer/GridContainer/CrabJewel10"]
layout_mode = 0
offset_left = 83.0
offset_top = 102.0
offset_right = 202.0
offset_bottom = 132.0
theme_override_colors/font_color = Color(0.878431, 0.470588, 0.466667, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("7_h4pob")
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_xa2a0")
text = "323242"

[node name="CrabJewel11" type="Control" parent="ScrollContainer/GridContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="ScrollContainer/GridContainer/CrabJewel11"]
layout_mode = 0
offset_left = 75.0
offset_top = 97.0
offset_right = 202.0
offset_bottom = 132.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_mcoks")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_lex7d")
theme_override_styles/normal = SubResource("StyleBoxEmpty_bimkj")

[node name="JewelImage" type="TextureRect" parent="ScrollContainer/GridContainer/CrabJewel11"]
material = SubResource("ShaderMaterial_wkbfl")
layout_mode = 0
offset_left = 30.0
offset_top = -36.0
offset_right = 255.0
offset_bottom = 117.0
texture = ExtResource("3_40osy")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="ScrollContainer/GridContainer/CrabJewel11"]
layout_mode = 0
offset_left = 83.0
offset_top = 102.0
offset_right = 202.0
offset_bottom = 132.0
theme_override_colors/font_color = Color(0.878431, 0.470588, 0.466667, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("7_h4pob")
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_xa2a0")
text = "323242"

[node name="CrabJewel12" type="Control" parent="ScrollContainer/GridContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="ScrollContainer/GridContainer/CrabJewel12"]
layout_mode = 0
offset_left = 75.0
offset_top = 97.0
offset_right = 202.0
offset_bottom = 132.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_mcoks")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_lex7d")
theme_override_styles/normal = SubResource("StyleBoxEmpty_bimkj")

[node name="JewelImage" type="TextureRect" parent="ScrollContainer/GridContainer/CrabJewel12"]
material = SubResource("ShaderMaterial_wkbfl")
layout_mode = 0
offset_left = 30.0
offset_top = -36.0
offset_right = 255.0
offset_bottom = 117.0
texture = ExtResource("3_40osy")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="ScrollContainer/GridContainer/CrabJewel12"]
layout_mode = 0
offset_left = 83.0
offset_top = 102.0
offset_right = 202.0
offset_bottom = 132.0
theme_override_colors/font_color = Color(0.878431, 0.470588, 0.466667, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("7_h4pob")
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_xa2a0")
text = "323242"

[node name="CrabJewel13" type="Control" parent="ScrollContainer/GridContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="ScrollContainer/GridContainer/CrabJewel13"]
layout_mode = 0
offset_left = 75.0
offset_top = 97.0
offset_right = 202.0
offset_bottom = 132.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_mcoks")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_lex7d")
theme_override_styles/normal = SubResource("StyleBoxEmpty_bimkj")

[node name="JewelImage" type="TextureRect" parent="ScrollContainer/GridContainer/CrabJewel13"]
material = SubResource("ShaderMaterial_wkbfl")
layout_mode = 0
offset_left = 30.0
offset_top = -36.0
offset_right = 255.0
offset_bottom = 117.0
texture = ExtResource("3_40osy")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="ScrollContainer/GridContainer/CrabJewel13"]
layout_mode = 0
offset_left = 83.0
offset_top = 102.0
offset_right = 202.0
offset_bottom = 132.0
theme_override_colors/font_color = Color(0.878431, 0.470588, 0.466667, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("7_h4pob")
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_xa2a0")
text = "323242"

[node name="CrabJewel14" type="Control" parent="ScrollContainer/GridContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="ScrollContainer/GridContainer/CrabJewel14"]
layout_mode = 0
offset_left = 75.0
offset_top = 97.0
offset_right = 202.0
offset_bottom = 132.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_mcoks")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_lex7d")
theme_override_styles/normal = SubResource("StyleBoxEmpty_bimkj")

[node name="JewelImage" type="TextureRect" parent="ScrollContainer/GridContainer/CrabJewel14"]
material = SubResource("ShaderMaterial_wkbfl")
layout_mode = 0
offset_left = 30.0
offset_top = -36.0
offset_right = 255.0
offset_bottom = 117.0
texture = ExtResource("3_40osy")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="ScrollContainer/GridContainer/CrabJewel14"]
layout_mode = 0
offset_left = 83.0
offset_top = 102.0
offset_right = 202.0
offset_bottom = 132.0
theme_override_colors/font_color = Color(0.878431, 0.470588, 0.466667, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("7_h4pob")
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("StyleBoxFlat_xa2a0")
text = "323242"

[node name="Control" type="Control" parent="ScrollContainer"]
layout_mode = 2

[node name="Coins" type="Panel" parent="."]
offset_left = 121.0
offset_top = 90.0
offset_right = 361.0
offset_bottom = 140.0
theme_override_styles/panel = SubResource("StyleBoxFlat_gll5b")

[node name="Coinslabel" type="Label" parent="Coins"]
visible = false
layout_mode = 0
offset_left = 22.0
offset_top = 14.0
offset_right = 177.0
offset_bottom = 46.0
theme_override_constants/shadow_offset_x = 6
theme_override_constants/outline_size = 6
theme_override_constants/shadow_outline_size = 6
theme_override_fonts/font = ExtResource("7_h4pob")
theme_override_font_sizes/font_size = 22
text = "COINS"

[node name="CoinIcon" type="TextureRect" parent="Coins"]
layout_mode = 0
offset_left = 54.0
offset_top = -54.0
offset_right = 366.0
offset_bottom = 124.0
texture = ExtResource("8_lhve0")
expand_mode = 1
stretch_mode = 5

[node name="CoinLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 140.0
offset_top = 101.0
offset_right = 212.0
offset_bottom = 143.0
theme_override_colors/font_color = Color(0.878431, 0.470588, 0.466667, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 16
theme_override_constants/shadow_outline_size = 23
theme_override_fonts/font = ExtResource("7_h4pob")
theme_override_font_sizes/font_size = 22
text = "COINS"

[connection signal="pressed" from="ScrollContainer/GridContainer/CrabJewel/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="ScrollContainer/GridContainer/CrabJewel2/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="ScrollContainer/GridContainer/CrabJewel3/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="ScrollContainer/GridContainer/CrabJewel4/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="ScrollContainer/GridContainer/CrabJewel5/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="ScrollContainer/GridContainer/CrabJewel6/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="ScrollContainer/GridContainer/CrabJewel7/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="ScrollContainer/GridContainer/CrabJewel8/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="ScrollContainer/GridContainer/CrabJewel9/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="ScrollContainer/GridContainer/CrabJewel10/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="ScrollContainer/GridContainer/CrabJewel11/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="ScrollContainer/GridContainer/CrabJewel12/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="ScrollContainer/GridContainer/CrabJewel13/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="ScrollContainer/GridContainer/CrabJewel14/Button" to="." method="_on_button_pressed"]
